AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = fdl
fdl_SOURCES = config.h \
src/command-switches.h \	      
src/node.h \
src/node.cc \
src/link.h \
src/layout.h \
src/layout.cc \
src/fdl.h \
src/fdl.cc \
src/file-handler.h \
src/file-handler.cc \
src/ext/json/autolink.h \ 
src/ext/json/config.h \
src/ext/json/features.h \
src/ext/json/forwards.h \
src/ext/json/json.h \
src/ext/json/reader.h \
src/ext/json/value.h \  
src/ext/json/writer.h \
src/ext/json/json_reader.cpp \
src/ext/json/json_value.cpp \
src/ext/json/json_writer.cpp
